--- a/config.org
+++ b/config.org
@@ -1524,6 +1524,14 @@ Then run =lsp-cquery-enable= when in a c/c++ file (or add hook).
 )
 #+END_SRC
 
+** Evil Surround
+#+BEGIN_SRC emacs-lisp
+(use-package evil-surround
+  :ensure t
+  :config
+  (global-evil-surround-mode 1))
+#+END_SRC
+
 
 * Keybindings 
 #+begin_src emacs-lisp
