--- a/config.org
+++ b/config.org
@@ -1532,6 +1532,10 @@ Then run =lsp-cquery-enable= when in a c/c++ file (or add hook).
   (global-evil-surround-mode 1))
 #+END_SRC
 
+** Restclient
+#+BEGIN_SRC emacs-lisp
+(use-package restclient :ensure t)
+#+END_SRC
 
 * Keybindings 
 #+begin_src emacs-lisp
