--- a/config.org
+++ b/config.org
@@ -2387,3 +2387,27 @@ Helper Functions to export nikola blog posts to hugo blog post format
   (next-line 1))
 #+END_SRC
 
+** Eshell Customization
+#+begin_src emacs-lisp
+  (defmacro with-face (str &rest properties)
+    `(propertize ,str 'face (list ,@properties)))
+  
+  (defun shk-eshell-prompt ()
+    (let ((header-bg "#fff"))
+      (concat
+       (with-face (concat (eshell/pwd) " ") :background header-bg)
+       (with-face (format-time-string "(%Y-%m-%d %H:%M) " (current-time)) :background header-bg :foreground "#888")
+       (with-face
+        (or (ignore-errors (format "(%s)" (vc-responsible-backend default-directory))) "")
+        :background header-bg)
+       (with-face "\n" :background header-bg)
+       (with-face user-login-name :foreground "#0184bc")
+       "@"
+       (with-face "gaia" :foreground "#d75f00")
+       (if (= (user-uid) 0)
+           (with-face " #" :foreground "red")
+         " $")
+       " ")))
+  (setq eshell-prompt-function 'shk-eshell-prompt)
+  (setq eshell-highlight-prompt nil)
+#+end_src
