--- a/config.org
+++ b/config.org
@@ -87,8 +87,8 @@ Note try (setq left-margin-width 20) and (set-window-margins (selected-window) 2
 Note: (internal-border-width . 40) is linked with emacs.internalBorder: 40 Emacs.InternalBorder: 40 in .Xresources
 #+begin_src emacs-lisp
 ;; (setq default-frame-alist '((font . "Bront 13")))
-;; (setq default-frame-alist '((font . "SourceCodePro 11")))
-(setq default-frame-alist '((font . "Hack 11")))
+(setq default-frame-alist '((font . "Source Code Pro 13")))
+;; (setq default-frame-alist '((font . "Hack 11")))
 (setq whitespace-line-column 999)
 (set-face-bold-p 'bold nil)
 ;; (setq-default left-margin-width 4 right-margin-width 2) ; Set down because to much margin with built-in linums
