--- a/config.org
+++ b/config.org
@@ -217,18 +217,11 @@ to TO-WHAT if it's > 1 char long & doesn't already begin with a space."
 Best light theme by far (for real!):
 #+BEGIN_SRC emacs-lisp
 ;; (load-theme 'misterioso)
-(use-package moe-theme :ensure t
-  ;; :config (load-theme 'moe-theme)
-  :config (moe-dark)
-   (set-face-attribute 'fringe nil
-                      :foreground (face-foreground 'default)
-                      :background (face-background 'default))
-   (set-face-attribute 'vertical-border nil
-                      :foreground (face-foreground 'default)
-                      :background (face-background 'default))
-   (set-face-attribute 'line-number nil
-                      :background (face-background 'default))
-)
+;; (use-package moe-theme :ensure t
+;;   ;; :config (load-theme 'moe-theme)
+;;   :config (moe-dark)
+;; )
+(load-theme 'base16-gruvbox-dark-medium) ;; use light-soft as a light theme
 #+END_SRC
 Insert/replace in moe dark.el:
       Terminal Dark Style: (black-1 "#636b7e") (black-2 "#4f5665") (black-2-5 "#3f4551") (black-3 "#546e7a") (black-4 "#323741") (black-5 "#282c34") (black-6 "#20232a")
@@ -342,6 +335,17 @@ Doom-Dracula is also nice
 
 #+end_src
 
+Always unify these:
+#+begin_src emacs-lisp
+(set-face-attribute 'fringe nil
+                :foreground (face-foreground 'default)
+                :background (face-background 'default))
+(set-face-attribute 'vertical-border nil
+                :foreground (face-foreground 'default)
+                :background (face-background 'default))
+(set-face-attribute 'line-number nil
+                :background (face-background 'default))
+#+end_src
 * Functions
 Function for vim-like increment/decrement
 #+BEGIN_SRC emacs-lisp
